--- a/Laba1/Views/Posts/Index.cshtml
+++ b/Laba1/Views/Posts/Index.cshtml
@@ -9,7 +9,7 @@
 {
 
 
-    <h3 style="text-align:center;">Должности</h3>
+    <h3 style="text-align:center;">Должности компании</h3>
 
     <hr style="width:100px; margin: auto;" />
     @if (User.IsInRole("multiAdmin"))
